# py-databases

./: README.md  pyproject.toml
.github/workflows/: couchbase.yaml  mssql.yml  tests.yaml
davidkhala/: db.py  sql.py
davidkhala/couchbase/: __init__.py
davidkhala/couchbase/capella/: bucket.py  cluster.py  http.py  organization.py  project.py
davidkhala/data/base/: __init__.py  common.py  sql.py
davidkhala/data/base/astra/: __init__.py  dba.py
davidkhala/data/base/cassandra/: __init__.py  dba.py  testcontainers.py
davidkhala/data/base/couchbase/: README.md  __init__.py
davidkhala/data/base/couchbase/capella/: bucket.py  cluster.py  http.py  organization.py  project.py
davidkhala/data/base/db2/: __init__.py  dba.py  rest.py  testcontainers.py
davidkhala/data/base/duck/: __init__.py
davidkhala/data/base/maria/: __init__.py
davidkhala/data/base/milvus/: __init__.py  collection.py  embedding_fn.py  field.py  format.py  global.py  inline.py
davidkhala/data/base/mongo/: __init__.py
davidkhala/data/base/mssql/: __init__.py  dba.py  testcontainers.py  with_odbc.py  with_tds.py
davidkhala/data/base/mysql/: __init__.py  testcontainers.py
davidkhala/data/base/pg/: __init__.py  dba.py  testcontainers.py
davidkhala/mysql/: __init__.py
tests/: astra_test.py  couchbase_test.py  duckdb_test.py  sql_test.py  test_couchbase.py  test_sql.py
tests/cassandra/: astra_test.py  cassandra_test.py  datastax_test.py
tests/couchbase/: capella_test.py
tests/milvus/: cases.py  test_lite.py  test_server.py
tests/mongo/: atlas_test.py
tests/sql/: db2_test.py  mssql_test.py  mysql_test.py  pg_test.py
tests/sql/mssql/: azure_test.py  local_test.py  mssql_test.py
