[project]
name = "davidkhala.databases"
version = "0.0.0"
description = ""
authors = [
    { name = "David Liu", email = "david-khala@hotmail.com" }
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
]

[tool.poetry]
packages = [{ include = "davidkhala" }]


[tool.poetry.group.dev.dependencies]
pytest = ">=0.0.0"

[project.optional-dependencies]
couchbase = ["couchbase>=0.0.0", "davidkhala-utils[http-request] (>=0.4.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
