[project]
name = "davidkhala.databases"
version = "0.1.4"
description = ""
authors = [{ name = "David Liu", email = "david-khala@hotmail.com" }]
requires-python = ">=3.11"
readme = "README.md"
dependencies = []

[project.optional-dependencies]
couchbase = [
    "couchbase",
    "davidkhala-utils[http-request]",
]
duck = ["duckdb"]
milvus = ["pymilvus[model, milvus_lite]", "hf_xet"]
mysql = ["sqlalchemy", "mysqlclient"]
pg = ["sqlalchemy", "psycopg2"]
maria = ["sqlalchemy", "mariadb"]
[dependency-groups]
dev = ["pytest", "seaborn", "matplotlib", "testcontainers[mysql, postgres]"]

[tool.hatch.build.targets.sdist]
include = ["davidkhala"]

[tool.hatch.build.targets.wheel]
include = ["davidkhala"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
