[project]
name = "davidkhala.databases"
version = "0.1.4"
description = ""
authors = [{ name = "David Liu", email = "david-khala@hotmail.com" }]
requires-python = ">=3.10"
readme = "README.md"
dependencies = ["davidkhala-utils"]

[project.optional-dependencies]
couchbase = [
    "couchbase",
    "davidkhala-utils[http-request]",
]
duck = ["duckdb"]
milvus = ["pymilvus[model, milvus_lite]", "hf_xet"]
mysql = ["sqlalchemy", "mysqlclient"]
pg = ["sqlalchemy", "psycopg2"]
maria = ["sqlalchemy", "mariadb"]
mongo = ["pymongo"]
db2 = ["sqlalchemy", "ibm-db"]
astra  = ['astrapy']

[dependency-groups]
dev = ["pytest"]
sql = ["testcontainers[mysql, postgres, db2]"]
duck = ["seaborn", "matplotlib", "pandas<3"]

[tool.hatch.build.targets.sdist]
include = ["davidkhala"]

[tool.hatch.build.targets.wheel]
include = ["davidkhala"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'"
]